# tap-ms-dynamics

./: .gitignore  CVE-2026-25645-ANALYSIS.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: veracode-static-scan.yml
tap_dynamics/: __init__.py  client.py  discover.py  streams.py  sync.py
