[tool.poetry]
name = "tap-ms-dynamics"
version = "1.1.0"
description = "Singer.io tap for the Microsoft Dataverse Web API"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
packages = [{ include = "tap_dynamics" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
backoff = "1.8.0"
certifi = ">=2024.7.4"
chardet = "4.0.0"
ciso8601 = "2.1.3"
idna = "3.7"
jsonschema = "2.6.0"
python-dateutil = "2.8.1"
pytz = "2018.4"
requests = ">=2.32.0"
simplejson = "3.11.1"
singer-python = "5.10.0"
six = "1.15.0"
urllib3 = "^1.26.18"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-ms-dynamics = "tap_dynamics:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
