[tool.poetry]
name = "tap-ms-dynamics"
version = "2.0.0"
description = "Singer.io tap for the Microsoft Dataverse Web API"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
packages = [{ include = "tap_dynamics" }]

[tool.poetry.dependencies]
python = "^3.13.0"
backoff = "2.2.1"
chardet = "5.2.0"
python-dateutil = ">=2.8.2"
pytz = ">=2020.1"
requests = "^2.31.0"
singer-python = "6.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-ms-dynamics = "tap_dynamics:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
